// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox Component snapshots should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CheckBox
    label="Checkbox Label"
    onToggle={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <ForwardRef>
          <ForwardRef>
            <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />
          </ForwardRef>
        </ForwardRef>,
        <ForwardRef>
          Checkbox Label
        </ForwardRef>,
      ],
      "disabled": undefined,
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <ForwardRef>
            <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />
          </ForwardRef>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "checked": undefined,
            "children": <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />,
            "disabled": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "inherit",
              "height": "0.5em",
              "name": "check",
              "strokeWidth": 1,
              "width": "0.5em",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "CheckBox__Input-sc-1fsvwp6-1",
              "isStatic": false,
              "rules": Array [
                "display:inline-flex;justify-content:center;align-items:center;position:relative;width:1em;height:1em;border-radius:",
                [Function],
                ";box-shadow:0px 0px 0px 1px ",
                [Function],
                ";background:",
                [Function],
                ";border:solid 0.05em #fff;box-sizing:border-box;transition:background 0.3s ease-out;color:",
                [Function],
                ";fill:none;",
              ],
            },
            "displayName": "CheckBox__Input",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "CheckBox__Input-sc-1fsvwp6-1",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "CheckBox__InputWrapper-sc-1fsvwp6-3",
            "isStatic": true,
            "rules": Array [
              "display:flex;align-items:center;",
            ],
          },
          "displayName": "CheckBox__InputWrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "CheckBox__InputWrapper-sc-1fsvwp6-3",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Checkbox Label",
          "disabled": undefined,
        },
        "ref": null,
        "rendered": "Checkbox Label",
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "CheckBox__Label-sc-1fsvwp6-2",
            "isStatic": false,
            "rules": Array [
              "display:inline-block;margin-left:8px;user-select:none;opacity:",
              [Function],
              ";",
            ],
          },
          "displayName": "CheckBox__Label",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "CheckBox__Label-sc-1fsvwp6-2",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "CheckBox__Wrapper-sc-1fsvwp6-0",
        "isStatic": false,
        "rules": Array [
          "pointer-events:",
          [Function],
          ";cursor:pointer;line-height:1;display:inline-flex;align-items:center;",
        ],
      },
      "displayName": "CheckBox__Wrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "CheckBox__Wrapper-sc-1fsvwp6-0",
      "target": "span",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <ForwardRef>
            <ForwardRef>
              <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />
            </ForwardRef>
          </ForwardRef>,
          <ForwardRef>
            Checkbox Label
          </ForwardRef>,
        ],
        "disabled": undefined,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <ForwardRef>
              <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />
            </ForwardRef>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "checked": undefined,
              "children": <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />,
              "disabled": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "inherit",
                "height": "0.5em",
                "name": "check",
                "strokeWidth": 1,
                "width": "0.5em",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "CheckBox__Input-sc-1fsvwp6-1",
                "isStatic": false,
                "rules": Array [
                  "display:inline-flex;justify-content:center;align-items:center;position:relative;width:1em;height:1em;border-radius:",
                  [Function],
                  ";box-shadow:0px 0px 0px 1px ",
                  [Function],
                  ";background:",
                  [Function],
                  ";border:solid 0.05em #fff;box-sizing:border-box;transition:background 0.3s ease-out;color:",
                  [Function],
                  ";fill:none;",
                ],
              },
              "displayName": "CheckBox__Input",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "CheckBox__Input-sc-1fsvwp6-1",
              "target": [Function],
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
              Symbol(Symbol.hasInstance): [Function],
            },
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "CheckBox__InputWrapper-sc-1fsvwp6-3",
              "isStatic": true,
              "rules": Array [
                "display:flex;align-items:center;",
              ],
            },
            "displayName": "CheckBox__InputWrapper",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "CheckBox__InputWrapper-sc-1fsvwp6-3",
            "target": "span",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Checkbox Label",
            "disabled": undefined,
          },
          "ref": null,
          "rendered": "Checkbox Label",
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "CheckBox__Label-sc-1fsvwp6-2",
              "isStatic": false,
              "rules": Array [
                "display:inline-block;margin-left:8px;user-select:none;opacity:",
                [Function],
                ";",
              ],
            },
            "displayName": "CheckBox__Label",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "CheckBox__Label-sc-1fsvwp6-2",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "CheckBox__Wrapper-sc-1fsvwp6-0",
          "isStatic": false,
          "rules": Array [
            "pointer-events:",
            [Function],
            ";cursor:pointer;line-height:1;display:inline-flex;align-items:center;",
          ],
        },
        "displayName": "CheckBox__Wrapper",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "CheckBox__Wrapper-sc-1fsvwp6-0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`CheckBox Component snapshots should match snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CheckBox
    checked={true}
    label="Checkbox Label"
    onToggle={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <ForwardRef>
          <ForwardRef
            checked={true}
          >
            <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />
          </ForwardRef>
        </ForwardRef>,
        <ForwardRef>
          Checkbox Label
        </ForwardRef>,
      ],
      "disabled": undefined,
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <ForwardRef
            checked={true}
          >
            <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />
          </ForwardRef>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "checked": true,
            "children": <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />,
            "disabled": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "inherit",
              "height": "0.5em",
              "name": "check",
              "strokeWidth": 1,
              "width": "0.5em",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "CheckBox__Input-sc-1fsvwp6-1",
              "isStatic": false,
              "rules": Array [
                "display:inline-flex;justify-content:center;align-items:center;position:relative;width:1em;height:1em;border-radius:",
                [Function],
                ";box-shadow:0px 0px 0px 1px ",
                [Function],
                ";background:",
                [Function],
                ";border:solid 0.05em #fff;box-sizing:border-box;transition:background 0.3s ease-out;color:",
                [Function],
                ";fill:none;",
              ],
            },
            "displayName": "CheckBox__Input",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "CheckBox__Input-sc-1fsvwp6-1",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "CheckBox__InputWrapper-sc-1fsvwp6-3",
            "isStatic": true,
            "rules": Array [
              "display:flex;align-items:center;",
            ],
          },
          "displayName": "CheckBox__InputWrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "CheckBox__InputWrapper-sc-1fsvwp6-3",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Checkbox Label",
          "disabled": undefined,
        },
        "ref": null,
        "rendered": "Checkbox Label",
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "CheckBox__Label-sc-1fsvwp6-2",
            "isStatic": false,
            "rules": Array [
              "display:inline-block;margin-left:8px;user-select:none;opacity:",
              [Function],
              ";",
            ],
          },
          "displayName": "CheckBox__Label",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "CheckBox__Label-sc-1fsvwp6-2",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "CheckBox__Wrapper-sc-1fsvwp6-0",
        "isStatic": false,
        "rules": Array [
          "pointer-events:",
          [Function],
          ";cursor:pointer;line-height:1;display:inline-flex;align-items:center;",
        ],
      },
      "displayName": "CheckBox__Wrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "CheckBox__Wrapper-sc-1fsvwp6-0",
      "target": "span",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <ForwardRef>
            <ForwardRef
              checked={true}
            >
              <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />
            </ForwardRef>
          </ForwardRef>,
          <ForwardRef>
            Checkbox Label
          </ForwardRef>,
        ],
        "disabled": undefined,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <ForwardRef
              checked={true}
            >
              <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />
            </ForwardRef>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "checked": true,
              "children": <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />,
              "disabled": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "inherit",
                "height": "0.5em",
                "name": "check",
                "strokeWidth": 1,
                "width": "0.5em",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "CheckBox__Input-sc-1fsvwp6-1",
                "isStatic": false,
                "rules": Array [
                  "display:inline-flex;justify-content:center;align-items:center;position:relative;width:1em;height:1em;border-radius:",
                  [Function],
                  ";box-shadow:0px 0px 0px 1px ",
                  [Function],
                  ";background:",
                  [Function],
                  ";border:solid 0.05em #fff;box-sizing:border-box;transition:background 0.3s ease-out;color:",
                  [Function],
                  ";fill:none;",
                ],
              },
              "displayName": "CheckBox__Input",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "CheckBox__Input-sc-1fsvwp6-1",
              "target": [Function],
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
              Symbol(Symbol.hasInstance): [Function],
            },
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "CheckBox__InputWrapper-sc-1fsvwp6-3",
              "isStatic": true,
              "rules": Array [
                "display:flex;align-items:center;",
              ],
            },
            "displayName": "CheckBox__InputWrapper",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "CheckBox__InputWrapper-sc-1fsvwp6-3",
            "target": "span",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Checkbox Label",
            "disabled": undefined,
          },
          "ref": null,
          "rendered": "Checkbox Label",
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "CheckBox__Label-sc-1fsvwp6-2",
              "isStatic": false,
              "rules": Array [
                "display:inline-block;margin-left:8px;user-select:none;opacity:",
                [Function],
                ";",
              ],
            },
            "displayName": "CheckBox__Label",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "CheckBox__Label-sc-1fsvwp6-2",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "CheckBox__Wrapper-sc-1fsvwp6-0",
          "isStatic": false,
          "rules": Array [
            "pointer-events:",
            [Function],
            ";cursor:pointer;line-height:1;display:inline-flex;align-items:center;",
          ],
        },
        "displayName": "CheckBox__Wrapper",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "CheckBox__Wrapper-sc-1fsvwp6-0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`CheckBox Component snapshots should match snapshot 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CheckBox
    disabled={true}
    label="Checkbox Label"
    onToggle={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <ForwardRef>
          <ForwardRef
            disabled={true}
          >
            <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />
          </ForwardRef>
        </ForwardRef>,
        <ForwardRef
          disabled={true}
        >
          Checkbox Label
        </ForwardRef>,
      ],
      "disabled": true,
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <ForwardRef
            disabled={true}
          >
            <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />
          </ForwardRef>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "checked": undefined,
            "children": <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />,
            "disabled": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "inherit",
              "height": "0.5em",
              "name": "check",
              "strokeWidth": 1,
              "width": "0.5em",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "CheckBox__Input-sc-1fsvwp6-1",
              "isStatic": false,
              "rules": Array [
                "display:inline-flex;justify-content:center;align-items:center;position:relative;width:1em;height:1em;border-radius:",
                [Function],
                ";box-shadow:0px 0px 0px 1px ",
                [Function],
                ";background:",
                [Function],
                ";border:solid 0.05em #fff;box-sizing:border-box;transition:background 0.3s ease-out;color:",
                [Function],
                ";fill:none;",
              ],
            },
            "displayName": "CheckBox__Input",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "CheckBox__Input-sc-1fsvwp6-1",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "CheckBox__InputWrapper-sc-1fsvwp6-3",
            "isStatic": true,
            "rules": Array [
              "display:flex;align-items:center;",
            ],
          },
          "displayName": "CheckBox__InputWrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "CheckBox__InputWrapper-sc-1fsvwp6-3",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Checkbox Label",
          "disabled": true,
        },
        "ref": null,
        "rendered": "Checkbox Label",
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "CheckBox__Label-sc-1fsvwp6-2",
            "isStatic": false,
            "rules": Array [
              "display:inline-block;margin-left:8px;user-select:none;opacity:",
              [Function],
              ";",
            ],
          },
          "displayName": "CheckBox__Label",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "CheckBox__Label-sc-1fsvwp6-2",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "CheckBox__Wrapper-sc-1fsvwp6-0",
        "isStatic": false,
        "rules": Array [
          "pointer-events:",
          [Function],
          ";cursor:pointer;line-height:1;display:inline-flex;align-items:center;",
        ],
      },
      "displayName": "CheckBox__Wrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "CheckBox__Wrapper-sc-1fsvwp6-0",
      "target": "span",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <ForwardRef>
            <ForwardRef
              disabled={true}
            >
              <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />
            </ForwardRef>
          </ForwardRef>,
          <ForwardRef
            disabled={true}
          >
            Checkbox Label
          </ForwardRef>,
        ],
        "disabled": true,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <ForwardRef
              disabled={true}
            >
              <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />
            </ForwardRef>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "checked": undefined,
              "children": <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />,
              "disabled": true,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "inherit",
                "height": "0.5em",
                "name": "check",
                "strokeWidth": 1,
                "width": "0.5em",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "CheckBox__Input-sc-1fsvwp6-1",
                "isStatic": false,
                "rules": Array [
                  "display:inline-flex;justify-content:center;align-items:center;position:relative;width:1em;height:1em;border-radius:",
                  [Function],
                  ";box-shadow:0px 0px 0px 1px ",
                  [Function],
                  ";background:",
                  [Function],
                  ";border:solid 0.05em #fff;box-sizing:border-box;transition:background 0.3s ease-out;color:",
                  [Function],
                  ";fill:none;",
                ],
              },
              "displayName": "CheckBox__Input",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "CheckBox__Input-sc-1fsvwp6-1",
              "target": [Function],
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
              Symbol(Symbol.hasInstance): [Function],
            },
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "CheckBox__InputWrapper-sc-1fsvwp6-3",
              "isStatic": true,
              "rules": Array [
                "display:flex;align-items:center;",
              ],
            },
            "displayName": "CheckBox__InputWrapper",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "CheckBox__InputWrapper-sc-1fsvwp6-3",
            "target": "span",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Checkbox Label",
            "disabled": true,
          },
          "ref": null,
          "rendered": "Checkbox Label",
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "CheckBox__Label-sc-1fsvwp6-2",
              "isStatic": false,
              "rules": Array [
                "display:inline-block;margin-left:8px;user-select:none;opacity:",
                [Function],
                ";",
              ],
            },
            "displayName": "CheckBox__Label",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "CheckBox__Label-sc-1fsvwp6-2",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "CheckBox__Wrapper-sc-1fsvwp6-0",
          "isStatic": false,
          "rules": Array [
            "pointer-events:",
            [Function],
            ";cursor:pointer;line-height:1;display:inline-flex;align-items:center;",
          ],
        },
        "displayName": "CheckBox__Wrapper",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "CheckBox__Wrapper-sc-1fsvwp6-0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`CheckBox Component snapshots should match snapshot 4`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CheckBox
    checked={true}
    disabled={true}
    label="Checkbox Label"
    onToggle={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <ForwardRef>
          <ForwardRef
            checked={true}
            disabled={true}
          >
            <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />
          </ForwardRef>
        </ForwardRef>,
        <ForwardRef
          disabled={true}
        >
          Checkbox Label
        </ForwardRef>,
      ],
      "disabled": true,
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <ForwardRef
            checked={true}
            disabled={true}
          >
            <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />
          </ForwardRef>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "checked": true,
            "children": <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />,
            "disabled": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "inherit",
              "height": "0.5em",
              "name": "check",
              "strokeWidth": 1,
              "width": "0.5em",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "CheckBox__Input-sc-1fsvwp6-1",
              "isStatic": false,
              "rules": Array [
                "display:inline-flex;justify-content:center;align-items:center;position:relative;width:1em;height:1em;border-radius:",
                [Function],
                ";box-shadow:0px 0px 0px 1px ",
                [Function],
                ";background:",
                [Function],
                ";border:solid 0.05em #fff;box-sizing:border-box;transition:background 0.3s ease-out;color:",
                [Function],
                ";fill:none;",
              ],
            },
            "displayName": "CheckBox__Input",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "CheckBox__Input-sc-1fsvwp6-1",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "CheckBox__InputWrapper-sc-1fsvwp6-3",
            "isStatic": true,
            "rules": Array [
              "display:flex;align-items:center;",
            ],
          },
          "displayName": "CheckBox__InputWrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "CheckBox__InputWrapper-sc-1fsvwp6-3",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Checkbox Label",
          "disabled": true,
        },
        "ref": null,
        "rendered": "Checkbox Label",
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "CheckBox__Label-sc-1fsvwp6-2",
            "isStatic": false,
            "rules": Array [
              "display:inline-block;margin-left:8px;user-select:none;opacity:",
              [Function],
              ";",
            ],
          },
          "displayName": "CheckBox__Label",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "CheckBox__Label-sc-1fsvwp6-2",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "CheckBox__Wrapper-sc-1fsvwp6-0",
        "isStatic": false,
        "rules": Array [
          "pointer-events:",
          [Function],
          ";cursor:pointer;line-height:1;display:inline-flex;align-items:center;",
        ],
      },
      "displayName": "CheckBox__Wrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "CheckBox__Wrapper-sc-1fsvwp6-0",
      "target": "span",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <ForwardRef>
            <ForwardRef
              checked={true}
              disabled={true}
            >
              <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />
            </ForwardRef>
          </ForwardRef>,
          <ForwardRef
            disabled={true}
          >
            Checkbox Label
          </ForwardRef>,
        ],
        "disabled": true,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <ForwardRef
              checked={true}
              disabled={true}
            >
              <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />
            </ForwardRef>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "checked": true,
              "children": <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />,
              "disabled": true,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "inherit",
                "height": "0.5em",
                "name": "check",
                "strokeWidth": 1,
                "width": "0.5em",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "CheckBox__Input-sc-1fsvwp6-1",
                "isStatic": false,
                "rules": Array [
                  "display:inline-flex;justify-content:center;align-items:center;position:relative;width:1em;height:1em;border-radius:",
                  [Function],
                  ";box-shadow:0px 0px 0px 1px ",
                  [Function],
                  ";background:",
                  [Function],
                  ";border:solid 0.05em #fff;box-sizing:border-box;transition:background 0.3s ease-out;color:",
                  [Function],
                  ";fill:none;",
                ],
              },
              "displayName": "CheckBox__Input",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "CheckBox__Input-sc-1fsvwp6-1",
              "target": [Function],
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
              Symbol(Symbol.hasInstance): [Function],
            },
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "CheckBox__InputWrapper-sc-1fsvwp6-3",
              "isStatic": true,
              "rules": Array [
                "display:flex;align-items:center;",
              ],
            },
            "displayName": "CheckBox__InputWrapper",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "CheckBox__InputWrapper-sc-1fsvwp6-3",
            "target": "span",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Checkbox Label",
            "disabled": true,
          },
          "ref": null,
          "rendered": "Checkbox Label",
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "CheckBox__Label-sc-1fsvwp6-2",
              "isStatic": false,
              "rules": Array [
                "display:inline-block;margin-left:8px;user-select:none;opacity:",
                [Function],
                ";",
              ],
            },
            "displayName": "CheckBox__Label",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "CheckBox__Label-sc-1fsvwp6-2",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "CheckBox__Wrapper-sc-1fsvwp6-0",
          "isStatic": false,
          "rules": Array [
            "pointer-events:",
            [Function],
            ";cursor:pointer;line-height:1;display:inline-flex;align-items:center;",
          ],
        },
        "displayName": "CheckBox__Wrapper",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "CheckBox__Wrapper-sc-1fsvwp6-0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`CheckBox Component snapshots should match snapshot 5`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CheckBox
    checked={null}
    label="Checkbox Label"
    onToggle={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <ForwardRef>
          <ForwardRef
            checked={null}
          >
            <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />
          </ForwardRef>
        </ForwardRef>,
        <ForwardRef>
          Checkbox Label
        </ForwardRef>,
      ],
      "disabled": undefined,
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <ForwardRef
            checked={null}
          >
            <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />
          </ForwardRef>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "checked": null,
            "children": <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />,
            "disabled": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "inherit",
              "height": "0.5em",
              "name": "check",
              "strokeWidth": 1,
              "width": "0.5em",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "CheckBox__Input-sc-1fsvwp6-1",
              "isStatic": false,
              "rules": Array [
                "display:inline-flex;justify-content:center;align-items:center;position:relative;width:1em;height:1em;border-radius:",
                [Function],
                ";box-shadow:0px 0px 0px 1px ",
                [Function],
                ";background:",
                [Function],
                ";border:solid 0.05em #fff;box-sizing:border-box;transition:background 0.3s ease-out;color:",
                [Function],
                ";fill:none;",
              ],
            },
            "displayName": "CheckBox__Input",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "CheckBox__Input-sc-1fsvwp6-1",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "CheckBox__InputWrapper-sc-1fsvwp6-3",
            "isStatic": true,
            "rules": Array [
              "display:flex;align-items:center;",
            ],
          },
          "displayName": "CheckBox__InputWrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "CheckBox__InputWrapper-sc-1fsvwp6-3",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Checkbox Label",
          "disabled": undefined,
        },
        "ref": null,
        "rendered": "Checkbox Label",
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "CheckBox__Label-sc-1fsvwp6-2",
            "isStatic": false,
            "rules": Array [
              "display:inline-block;margin-left:8px;user-select:none;opacity:",
              [Function],
              ";",
            ],
          },
          "displayName": "CheckBox__Label",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "CheckBox__Label-sc-1fsvwp6-2",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "CheckBox__Wrapper-sc-1fsvwp6-0",
        "isStatic": false,
        "rules": Array [
          "pointer-events:",
          [Function],
          ";cursor:pointer;line-height:1;display:inline-flex;align-items:center;",
        ],
      },
      "displayName": "CheckBox__Wrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "CheckBox__Wrapper-sc-1fsvwp6-0",
      "target": "span",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <ForwardRef>
            <ForwardRef
              checked={null}
            >
              <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />
            </ForwardRef>
          </ForwardRef>,
          <ForwardRef>
            Checkbox Label
          </ForwardRef>,
        ],
        "disabled": undefined,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <ForwardRef
              checked={null}
            >
              <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />
            </ForwardRef>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "checked": null,
              "children": <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />,
              "disabled": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "inherit",
                "height": "0.5em",
                "name": "check",
                "strokeWidth": 1,
                "width": "0.5em",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "CheckBox__Input-sc-1fsvwp6-1",
                "isStatic": false,
                "rules": Array [
                  "display:inline-flex;justify-content:center;align-items:center;position:relative;width:1em;height:1em;border-radius:",
                  [Function],
                  ";box-shadow:0px 0px 0px 1px ",
                  [Function],
                  ";background:",
                  [Function],
                  ";border:solid 0.05em #fff;box-sizing:border-box;transition:background 0.3s ease-out;color:",
                  [Function],
                  ";fill:none;",
                ],
              },
              "displayName": "CheckBox__Input",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "CheckBox__Input-sc-1fsvwp6-1",
              "target": [Function],
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
              Symbol(Symbol.hasInstance): [Function],
            },
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "CheckBox__InputWrapper-sc-1fsvwp6-3",
              "isStatic": true,
              "rules": Array [
                "display:flex;align-items:center;",
              ],
            },
            "displayName": "CheckBox__InputWrapper",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "CheckBox__InputWrapper-sc-1fsvwp6-3",
            "target": "span",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Checkbox Label",
            "disabled": undefined,
          },
          "ref": null,
          "rendered": "Checkbox Label",
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "CheckBox__Label-sc-1fsvwp6-2",
              "isStatic": false,
              "rules": Array [
                "display:inline-block;margin-left:8px;user-select:none;opacity:",
                [Function],
                ";",
              ],
            },
            "displayName": "CheckBox__Label",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "CheckBox__Label-sc-1fsvwp6-2",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "CheckBox__Wrapper-sc-1fsvwp6-0",
          "isStatic": false,
          "rules": Array [
            "pointer-events:",
            [Function],
            ";cursor:pointer;line-height:1;display:inline-flex;align-items:center;",
          ],
        },
        "displayName": "CheckBox__Wrapper",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "CheckBox__Wrapper-sc-1fsvwp6-0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
